--- a/client/src/styles/tailwind.output.css
+++ b/client/src/styles/tailwind.output.css
@@ -468,6 +468,30 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-backdrop-sepia:  ;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.z-0 {
+  z-index: 0;
+}
+
+.z-\[-1\] {
+  z-index: -1;
+}
+
 .col-span-4 {
   grid-column: span 4 / span 4;
 }
@@ -503,9 +527,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 12px;
 }
 
-.my-\[64px\] {
-  margin-top: 64px;
-  margin-bottom: 64px;
+.mx-\[10px\] {
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .mt-\[24px\] {
@@ -524,8 +548,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 20px;
 }
 
+.mt-\[30px\] {
+  margin-top: 30px;
+}
+
+.mt-\[35px\] {
+  margin-top: 35px;
+}
+
 .ml-\[5px\] {
   margin-left: 5px;
+}
+
+.mb-\[64px\] {
+  margin-bottom: 64px;
 }
 
 .ml-\[-40px\] {
@@ -550,6 +586,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mt-\[32px\] {
   margin-top: 32px;
+}
+
+.mt-\[80px\] {
+  margin-top: 80px;
+}
+
+.mb-\[89px\] {
+  margin-bottom: 89px;
+}
+
+.block {
+  display: block;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .flex {
@@ -584,12 +636,28 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: calc(100% - 180px);
 }
 
+.h-\[5px\] {
+  height: 5px;
+}
+
+.h-\[calc\(100\%-20px\)\] {
+  height: calc(100% - 20px);
+}
+
+.h-full {
+  height: 100%;
+}
+
 .h-\[calc\(100\%-250px\)\] {
   height: calc(100% - 250px);
 }
 
 .h-\[4px\] {
   height: 4px;
+}
+
+.h-\[528px\] {
+  height: 528px;
 }
 
 .min-h-\[780px\] {
@@ -626,6 +694,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-\[204px\] {
   width: 204px;
+}
+
+.w-auto {
+  width: auto;
 }
 
 .w-\[573px\] {
@@ -706,6 +778,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
 .border-theme-red {
   --tw-border-opacity: 1;
   border-color: rgb(200 16 46 / var(--tw-border-opacity));
@@ -733,11 +810,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-\[\#FAFAFA\] {
   --tw-bg-opacity: 1;
   background-color: rgb(250 250 250 / var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .p-\[10px\] {
@@ -860,16 +932,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 17px;
 }
 
-.leading-\[37px\] {
-  line-height: 37px;
+.leading-\[36px\] {
+  line-height: 36px;
 }
 
 .leading-\[26px\] {
   line-height: 26px;
-}
-
-.leading-\[36px\] {
-  line-height: 36px;
 }
 
 .leading-\[44px\] {
@@ -878,6 +946,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .leading-\[22px\] {
   line-height: 22px;
+}
+
+.leading-\[37px\] {
+  line-height: 37px;
 }
 
 .tracking-\[0\] {
@@ -943,6 +1015,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .outline-0 {
   outline-width: 0px;
+}
+
+.hover\:bg-black:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .focus-visible\:border-gray-900:focus-visible {
